--- a/insight/webapp/templates/webapp/about.html
+++ b/insight/webapp/templates/webapp/about.html
@@ -3,3 +3,29 @@
 {% block title %}
 Insight about
 {% endblock %}
+
+{% block content %}
+<div class="card no-hover">
+    <ul class="list-group">
+        <li class="list-group-item">
+            <h3 class="fw-bold"># About Us</h3>
+            <p class="lead">Welcome to Insight!</p>
+        </li>
+
+        <li class="list-group-item">
+            <h3 class="fw-bold"># Who We Are</h3>
+            <p>Insight is a dedicated project aimed at assisting students and parents in making well-informed decisions about higher education opportunities through the Joint Seat Allocation Authority (JoSAA) process. Our mission is to provide a comprehensive and user-friendly platform that delivers detailed information about participating institutes, seat availability, and historical trends.</p>
+        </li>
+
+        <li class="list-group-item">
+            <h3 class="fw-bold"># Our Vision</h3>
+            <p>We believe that access to transparent and detailed data can empower students to make better choices regarding their academic futures. By offering a reliable tool for analyzing previous years' data, we strive to enhance the decision-making process for aspirants of various engineering institutes across India.</p>
+        </li>
+
+        <li class="list-group-item">
+            <h3 class="fw-bold"># Our Team</h3>
+            <p>Our team comprises passionate developers committed to creating a valuable resource for the educational community. We work collaboratively to gather, process, and present data in a meaningful way, ensuring that our users have the best possible experience.</p>
+        </li>
+    </ul>
+</div>
+{% endblock %}
