--- a/insight/webapp/templates/webapp/base.html
+++ b/insight/webapp/templates/webapp/base.html
@@ -43,7 +43,6 @@
     }
     aside {
         max-width: 300px;
-        max-height: 100vh;
         overflow-y: auto;
     }
 
@@ -144,6 +143,18 @@
                         <div class="ms-2 me-auto">
                             <span class="badge bg-primary rounded-pill me-2">15-july</span>
                             (Round 4) *Last date for fee payment
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <span class="badge bg-primary rounded-pill me-2">17-july</span>
+                            (Round 5) Seat Allocation<br> FINAL ROUND of seat allocation for IITs
+                        </div>
+                    </li>                        
+                    <li class="list-group-item d-flex justify-content-between align-items-start">
+                        <div class="ms-2 me-auto">
+                            <span class="badge bg-primary rounded-pill me-2">22-july</span>
+                            (Round 5) *Last date for fee payment
                         </div>
                     </li>
                         
