--- a/insight/webapp/templates/webapp/institutes.html
+++ b/insight/webapp/templates/webapp/institutes.html
@@ -5,6 +5,83 @@ Participating Insitutes
 {% endblock %}
 
 {% block content %}
+
+<div>
+    <div class="container-fluid my-5" id="content">
+        <div class="row">
+        <aside class="col-md-2 border-end ms-3 bg-light p-3 h-100" >
+          <h3>Important Dates</h3>
+          <ul class="list-group list-group-flush">
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                      <span class="badge bg-primary rounded-pill me-2">14-jun</span>
+                      Candidate registration and choice filling for academic programs under JoSAA 2024 ENDS (Auto/System Locking of Choices)
+                  </div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                      <span class="badge bg-primary rounded-pill me-2">20-june</span>
+                      (Round 1) Seat Allocation
+                  </div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                      <span class="badge bg-primary rounded-pill me-2">24-june</span>
+                      (Round 1) *Last date for fee payment
+                  </div>
+              </li>
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                      <span class="badge bg-primary rounded-pill me-2">27-june</span>
+                      (Round 2) Seat Allocation
+                  </div>
+              </li>       
+              <li class="list-group-item d-flex justify-content-between align-items-start">
+                  <div class="ms-2 me-auto">
+                      <span class="badge bg-primary rounded-pill me-2">01-july</span>
+                      (Round 2) *Last date for fee payment
+                  </div>
+              </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">04-july</span>
+                  (Round 3) Seat Allocation
+              </div>
+          </li>                        <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">08-july</span>
+                  (Round 3) *Last date for fee payment
+              </div>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">10-july</span>
+                  (Round 4) Seat Allocation
+              </div>
+          </li>                        
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">15-july</span>
+                  (Round 4) *Last date for fee payment
+              </div>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">17-july</span>
+                  (Round 5) Seat Allocation<br> FINAL ROUND of seat allocation for IITs
+              </div>
+          </li>                        
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">22-july</span>
+                  (Round 5) *Last date for fee payment
+              </div>
+          </li>
+              
+          </ul>
+        </aside>
+
+        <main class="col-md-9">
 <div class="container">
     <h1 class="my-4 fw-bolder">Participating Institutes</h1>
     <p> Here is a list of all the institutes participating in the JoSAA counselling process. You can find their websites and contact information below. </p>
@@ -66,5 +143,8 @@ Participating Insitutes
         </nav>
     </div>
 
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
