--- a/insight/webapp/templates/webapp/index.html
+++ b/insight/webapp/templates/webapp/index.html
@@ -1,7 +1,82 @@
 {% extends "webapp/base.html" %}
 
 {% block content %}
-    <main>
+<div>
+  <div class="container-fluid my-5" id="content">
+      <div class="row">
+    <aside class="col-md-2 border-end ms-3 bg-light p-3" style="height: 552px;">
+      <h3>Important Dates</h3>
+      <ul class="list-group list-group-flush">
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">14-jun</span>
+                  Candidate registration and choice filling for academic programs under JoSAA 2024 ENDS (Auto/System Locking of Choices)
+              </div>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">20-june</span>
+                  (Round 1) Seat Allocation
+              </div>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">24-june</span>
+                  (Round 1) *Last date for fee payment
+              </div>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">27-june</span>
+                  (Round 2) Seat Allocation
+              </div>
+          </li>       
+          <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                  <span class="badge bg-primary rounded-pill me-2">01-july</span>
+                  (Round 2) *Last date for fee payment
+              </div>
+          </li>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+              <span class="badge bg-primary rounded-pill me-2">04-july</span>
+              (Round 3) Seat Allocation
+          </div>
+      </li>                        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+              <span class="badge bg-primary rounded-pill me-2">08-july</span>
+              (Round 3) *Last date for fee payment
+          </div>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+              <span class="badge bg-primary rounded-pill me-2">10-july</span>
+              (Round 4) Seat Allocation
+          </div>
+      </li>                        
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+              <span class="badge bg-primary rounded-pill me-2">15-july</span>
+              (Round 4) *Last date for fee payment
+          </div>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+              <span class="badge bg-primary rounded-pill me-2">17-july</span>
+              (Round 5) Seat Allocation<br> FINAL ROUND of seat allocation for IITs
+          </div>
+      </li>                        
+      <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+              <span class="badge bg-primary rounded-pill me-2">22-july</span>
+              (Round 5) *Last date for fee payment
+          </div>
+      </li>
+          
+      </ul>
+    </aside>
+
+    <main class="col-md-9">
       <div class="container">
         <div class="row justify-content-start">
 
@@ -60,6 +135,9 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+</div>
 
     </main>
     <!-- intro -->
